# metrics-exporter-sentry-v2

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: buffer.rs  envelope.rs  lib.rs  recorder.rs  runtime.rs
tests/: integration.rs
