[package]
name = "metrics-exporter-sentry-v2"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
description = "A metrics-rs Recorder that ships metrics to Sentry's trace_metric envelope endpoint (the new, trace-connected metrics product)."
repository = "https://github.com/jpkale/metrics-exporter-sentry-v2"
readme = "README.md"
keywords = ["metrics", "sentry", "observability", "telemetry", "tracing"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[features]
default = ["tokio"]
# Use a tokio task for the time-based flush (default).
tokio = ["dep:tokio"]
# Use a dedicated background OS thread for the time-based flush. Mutually
# compatible with `tokio` at compile time, but only one runtime is selected at
# install time.
blocking = []

[dependencies]
metrics = "0.24"
sentry = { version = "0.47", default-features = false }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"], optional = true }

[dev-dependencies]
sentry = { version = "0.47", default-features = false, features = ["test"] }
tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread"] }
serde_json = "1"

[lints.rust]
missing_docs = "warn"
